k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-project
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend
    
  template:
    metadata:
      labels:
        app: backend
    
    spec:
      containers:
      - name: backend
        image: cheikh9708/backend:latest

        ports:
        - containerPort: 5000

        volumeMounts:
          - mountPath: /app/data
            name: app-storage
      
      volumes:
        - name: app-storage
          PersistentVolumeClaim:
            claimName: app-pvc
