k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-service 
  namespace: devops-project
spec:
  type: ClusterIP

  selector: 
    app: backend 
  
  ports:
   - port: 5000
     targetPort: 5000
