k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service 
  namespace: devops-project 
spec:
  type: NodePort

  selector: 
    app: frontend
  
  ports:
    - port: 80
      targetPort: 80
      NodePort: 30080
