k8s/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: devops-project

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
