k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress 
  namespace: devops-project 

spec:
  ingressClassName: nginx

  rules:
    - host: login-app.local

      http:
        paths:
          - path: /
            pathType: Prefix 
            
            backend: 
              service:
                name: frontend-service
                port:
                  number: 80
